--- a/chat.html
+++ b/chat.html
@@ -77,6 +77,9 @@
 
     let selectedFile = null;
 
+    // Your Render backend base URL
+    const API_BASE = "https://ai-project-4ah9.onrender.com";
+
     function addMessage(text, cls) {
       const div = document.createElement("div");
       div.className = "msg " + cls;
@@ -93,7 +96,7 @@
       submitBtn.disabled = true;
 
       try {
-        const res = await fetch("http://localhost:8000/chat", {
+        const res = await fetch(`${API_BASE}/chat`, {
           method: "POST",
           headers: { "Content-Type": "application/json" },
           body: JSON.stringify({ text }),
@@ -119,13 +122,12 @@
         const formData = new FormData();
         formData.append("file", file);
 
-        const res = await fetch("http://localhost:8000/vision", {
+        const res = await fetch(`${API_BASE}/vision`, {
           method: "POST",
           body: formData,
         });
 
         const data = await res.json();
-        // Replace the "Analyzing image..." with real reply
         const lastBot = Array.from(document.querySelectorAll(".bot")).pop();
         if (lastBot && lastBot.textContent === "Analyzing image...") {
           lastBot.textContent = data.reply || "No reply";
