--- a/index.html
+++ b/index.html
@@ -178,5 +178,61 @@
       sendImageMessage(selectedFile);
     });
   </script>
+  const API_URL = "https://ai-project-backend-yuk6.onrender.com";
 </body>
+  <script>
+  const API_URL = "https://ai-project-backend-yuk6.onrender.com";
+
+  document.addEventListener("DOMContentLoaded", () => {
+    const form = document.getElementById("chat-form");
+    const input = document.getElementById("message-input");
+    const messagesDiv = document.getElementById("messages");
+
+    function addMessage(text, who) {
+      const p = document.createElement("p");
+      p.textContent = text;
+      p.className = who === "user" ? "user-message" : "bot-message";
+      messagesDiv.appendChild(p);
+    }
+
+    form.addEventListener("submit", async (e) => {
+      e.preventDefault();
+      const message = input.value.trim();
+      if (!message) return;
+
+      // show user message
+      addMessage(message, "user");
+      input.value = "";
+
+      try {
+        const res = await fetch(`${API_URL}/chat`, {
+          method: "POST",
+          headers: {
+            "Content-Type": "application/json"
+          },
+          body: JSON.stringify({ message })
+        });
+
+        if (!res.ok) {
+          addMessage("Error: backend returned " + res.status, "bot");
+          return;
+        }
+
+        const data = await res.json();
+        addMessage(data.reply || "No reply from backend", "bot");
+      } catch (err) {
+        console.error(err);
+        addMessage("Error connecting to backend", "bot");
+      }
+    });
+  });
+</script>
 </html>
+<div id="chat">
+  <div id="messages"></div>
+
+  <form id="chat-form">
+    <input id="message-input" type="text" placeholder="Type a message..." />
+    <button type="submit">Send</button>
+  </form>
+</div>
